<resources>
    <string name="app_name">Material Design</string>
    <string name="formLoginPassword">Login Password</string>
    <string name="bottomSheets">Bottom Sheets</string>
    <string name="bottomNavigation">Bottom Navigation</string>
    <string name="navigationDrawer">Navigation Drawer</string>
    <string name="btnLogin">Login</string>
    <string name="title_home">Home</string>
    <string name="userPassword">User Password</string>
    <string name="userEmail">User Email</string>
    <string name="enterValidEmail">Enter a valid Email</string>
    <string name="enterValidPassword">Enter a valid Password</string>
    <string name="validEmailPassword">Valid Email and Password</string>
    <string name="showBottomSheets">Show Bottom Sheets</string>
    <string name="hideBottomSheets">Hide Bottom Sheets</string>
    <string name="contentSheets">The probe was conducted under the leadership of Mueller at the FBI.\nThe investigation into the Trump campaign\'s ties to Russia have loomed over his presidency since its early days. It has continually expanded and now includes possible obstruction of justice by Trump and one of his sons as well as the role social media played in Russia\'s push to influence the 2016 election.\n\nTrump\'s highlight of the report fits with a trend of his promoting coverage favorable to him or critical of his key opponents, including Clinton.\nSolomon has written articles in the past defending the Trump administration and the former national security adviser Michael Flynn, who was fired after misrepresenting his connections to Russian agents in a conversation with Vice President Mike Pence.</string>
    <string name="label_home">HOME</string>
    <string name="label_notif">NOTIF</string>
    <string name="label_board">BOARD</string>
    <string name="contentNav_1">HOME CONTENT\n\nUn attentat commis dans le centre de Mogadiscio, en Somalie, a fait au moins 137 morts et 300 blessés selon la police locale.\nLe président somalien Mohamed Abdullahi Mohamed, dit Farmajo, a rendu visite dimanche aux victimes de l\'attentat de samedi dans le centre de Mogadiscio, qui a fait au moins 137 morts et 300 blessés selon la police locale.\nL\'attentat est survenu en milieu d\'après-midi samedi sur le carrefour PK5, situé dans le district de Hodan, un quartier commercial très animé de la capitale avec ses magasins et ses hôtels. Au moins 20 personnes gisant sur le bord de la route avaient été retrouvées samedi, selon une source policière.\nLe président Farmajo a visité dimanche matin l\'hôpital Erdogan, où les médecins lui ont dit avoir admis 205 patients, dont plus de 100 avec des blessures graves.</string>
    <string name="contentNav_2">NOTIFICATION CONTENT\n\nL\'explosion s\'est produite devant l\'hôtel Safari, un établissement populaire qui n\'est d\'ordinaire pas fréquenté par des responsables gouvernementaux. Habituellement, les islamistes shebab ciblent plutôt les hôtels dans lesquels résident les responsables officiels.\n\nCet attentat n\'a cependant pas encore été revendiqué par les shebab ou aucun autre groupe. Mais les shebab, liés à Al-Qaïda, lancent fréquemment des attaques et attentats-suicides dans Mogadiscio et ses environs.\n\nEn plus des 20 corps retrouvés samedi, au moins 20 corps supplémentaires ont été découverts dans la nuit dans les décombres, selon un témoin.\n"Nous n\'avons pas dormi la nuit dernière et nous avons travaillé avec les secouristes. Vingt personnes ont été retrouvées dans les décombres et je pense qu\'il pourrait y en avoir encore d\'autres", a déclaré à l\'AFP Abdirisak Mohamed, propriétaire d\'un des immeubles détruits par l\'explosion.</string>
    <string name="contentNav_3">DASHBOARD CONTENT\n\nIls ont été chassés de Mogadiscio en août 2011 et ont ensuite perdu l\'essentiel de leurs bastions. Mais ils contrôlent toujours de vastes zones rurales d\'où ils mènent des opérations de guérilla et des attentats-suicides, souvent dans la capitale, et contre des bases militaires, somaliennes ou étrangères.\nL\'attentat de samedi a eu lieu un jour après l\'annonce de la démission, sans explications, du ministre de la Défense et du chef de l\'armée.</string>
    <string name="title_activity_nav_drawer">NavDrawerActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
</resources>
